--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.5",
-        "zendframework/zendframework": "~2.5"
+        "zendframework/zendframework": "~2.5",
+        "doctrine/common" : ">=2.1"
+
     },
     "autoload": {
      "psr-0": { "Album": "module/Album/src/" }
